--- a/neural_network_xor_logic_from_scratch.ipynb
+++ b/neural_network_xor_logic_from_scratch.ipynb
@@ -239,3 +239,12 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
+
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### this code was coded by Shayan Ali Bhatti and is avaiable at https://github.com/shayanalibhatti/Coding-neural_network-for-XOR-logic-from-scratch
+"
+   ]
+  },
